# scholar-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: ARCHITECTURE.md  PROGRESS.md
scholar_mcp/: __init__.py  __main__.py  arxiv_client.py  config.py  core_client.py  pdf_utils.py  pubmed_client.py  s2_client.py  scholar_client.py  server.py
tests/: test_arxiv_client.py  test_core_client.py  test_pdf_utils.py  test_pubmed_client.py  test_s2_client.py
