[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-mcp"
version = "0.1.0"
description = "Unified academic paper search MCP server powered by Semantic Scholar"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "feedparser>=6.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.scripts]
scholar-mcp = "scholar_mcp.server:main"

[tool.setuptools.packages.find]
include = ["scholar_mcp*"]
