[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-mcp"
version = "0.2.0"
description = "MCP server for academic paper search, powered by Semantic Scholar (214M+ papers)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "semantic-scholar", "academic", "papers", "arxiv", "citations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "fastmcp>=2.0.0",
    "feedparser>=6.0.0",
    "pypdf>=4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.urls]
Homepage = "https://github.com/Liyux3/scholar-mcp"
Repository = "https://github.com/Liyux3/scholar-mcp"
Issues = "https://github.com/Liyux3/scholar-mcp/issues"

[project.scripts]
scholar-mcp = "scholar_mcp.server:main"

[tool.setuptools.packages.find]
include = ["scholar_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
